Fix projects listing page
The projects were all lopsided because of uneven content on the page.
I added the clearfix to make it look nicer.

--- a/static/css/simple.css
+++ b/static/css/simple.css
@@ -27,6 +27,15 @@ main article {
     text-align: center;
 }
 
+/* project */
+.project {
+    margin: 0;
+    padding: 2em;
+}
+
+.project p {
+    font-size: 18px;
+}
 
 /* post single */
 
